--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@ body { background-color: #f5f5f5; color: #333; font-family: Arial, sans-serif; }
 .textarea:focus { border-color: #3273dc; box-shadow: 0 0 0 0.2rem rgba(50,115,220,0.25); }
 a { color: #3273dc; }
 a:hover { color: #5a9bd4; }
-.view-only { display: none; width: 100vw; height: 100vh; }
-.markdown-viewer { background-color: #ffffff; color: #333; padding: 1rem; border: 1px solid #ddd; height: calc(100% - 50px); overflow: auto; }
-.full-screen { display: flex; flex-direction: column; }
-.full-screen .button { margin: 1rem; }
 .hidden { display: none; }
+.markdown-viewer { background-color: #ffffff; color: #333; padding: 1rem; border: 1px solid #ddd; height: calc(100vh - 50px); overflow: auto; }
 </style>
 </head>
 <body>
@@ -42,12 +39,9 @@ a:hover { color: #5a9bd4; }
         <iframe id="preview" style="width:100%; height:300px; border: none;"></iframe>
       </div>
     </div>
-    <section id="viewOnlySection" class="view-only full-screen">
-      <div class="container">
-        <div id="markdownViewer" class="markdown-viewer"></div>
-        <button class="button is-primary" onclick="goBack()">Back</button>
-      </div>
-    </section>
+    <div id="viewOnlySection" class="hidden">
+      <div id="markdownViewer" class="markdown-viewer"></div>
+    </div>
   </div>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -82,12 +76,9 @@ const params=new URLSearchParams(window.location.search);
 const markdown=params.get('data');
 if(markdown){
 document.getElementById('editorSection').classList.add('hidden');
-document.getElementById('viewOnlySection').classList.remove('view-only');
+document.getElementById('viewOnlySection').classList.remove('hidden');
 document.getElementById('markdownViewer').innerHTML=marked.parse(decodeURIComponent(markdown))
 }}
-function goBack(){
-window.history.back()
-}
 window.onload=function(){
 window.location.search.includes('data=')&&renderFromURL()
 };
