--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ a:hover { color: #5a9bd4; }
     </div>
     <div id="viewOnlySection" class="hidden">
       <div id="markdownViewer" class="markdown-viewer"></div>
+      <div class="control">
+        <button class="button is-primary" onclick="window.history.back()">Share</button>
+      </div>
     </div>
   </div>
 </section>
